(env (_ (flags (:standard -w -9-27-32))))
; 2021-04-23 mbac: this replaces a readme alias stanza that called the mdx
;  tool.  There's mdx stanza support built into dune now so we can just say
;  (mdx) to check the code in README.md files.  But... it doesn't seem like
;  it could have ever worked with ctypes because it runs a bytecode top-level?
;(mdx)
