opam-version: "2.0"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Anil Madhavapeddy <anil@recoil.org>" "Rizo Isrof <rizo@odis.io>"]
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/avsm/ocaml-yaml"
doc: "https://avsm.github.io/ocaml-yaml/"
bug-reports: "https://github.com/avsm/ocaml-yaml/issues"
depends: [
  "dune" {build & >="1.3"}
  "ppx_sexp_conv" {>= "v0.9.0"}
  "sexplib"
  "yaml" {= version}
  "mdx" {with-test}
  "alcotest" {with-test}
  "crowbar" {with-test}
  "junit_alcotest" {with-test}
  "ezjsonm" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/avsm/ocaml-yaml.git"
synopsis: "Parse and generate YAML 1.1 files"
description: """
ocaml-yaml with sexp support
"""
