opam-version: "2.0"
synopsis: "Parse and generate YAML 1.1 files"
description: "ocaml-yaml with sexp support"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: [
  "Anil Madhavapeddy <anil@recoil.org>"
  "Rizo Isrof <rizo@odis.io>"
  "Patrick Ferris"
  "favonia@gmail.com"
  "Alan J Hu <alanh@ccs.neu.edu>"
]
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/avsm/ocaml-yaml"
doc: "https://avsm.github.io/ocaml-yaml/"
bug-reports: "https://github.com/avsm/ocaml-yaml/issues"
depends: [
  "dune" {>= "1.3"}
  "ppx_sexp_conv" {>= "v0.9.0"}
  "sexplib"
  "yaml" {= version}
  "mdx" {with-test}
  "alcotest" {with-test}
  "crowbar" {with-test}
  "junit_alcotest" {with-test}
  "ezjsonm" {with-test}
  "bos" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/avsm/ocaml-yaml.git"
