opam-version: "1.2"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Anil Madhavapeddy <anil@recoil.org>"]
homepage: "https://github.com/avsm/ocaml-yaml"
doc: "http://anil-code.github.io/ocaml-yaml"
license: "ISC"
dev-repo: "https://github.com/avsm/ocaml-yaml.git"
bug-reports: "https://github.com/avsm/ocaml-yaml/issues"
tags: ["org:mirage" "org:ocamllabs"]
available: [ ocaml-version >= "4.03.0"]
depends: [
  "dune" {build}
  "configurator"
  "ctypes" {>="0.12.0"}
  "ppx_sexp_conv" {>="v0.9.0"}
  "sexplib"
  "rresult"
  "fmt"
  "logs"
  "bos"
  "alcotest" {test}
  "ezjsonm" {test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
