opam-version: "2.0"
synopsis: "Parse and generate YAML 1.1/1.2 files"
description: """\
This is an OCaml library to parse and generate the YAML file
format.  It is intended to interoperable with the [Ezjsonm](https://github.com/mirage/ezjsonm)
JSON handling library, if the simple common subset of Yaml
is used.  Anchors and other advanced Yaml features are not
implemented in the JSON compatibility layer.

The [Yaml module docs](http://anil-code.recoil.org/ocaml-yaml/yaml/Yaml/index.html) are browseable online."""
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: [
  "Anil Madhavapeddy <anil@recoil.org>"
  "Rizo Isrof <rizo@odis.io>"
  "Patrick Ferris"
  "favonia@gmail.com"
  "Alan J Hu <alanh@ccs.neu.edu>"
]
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/avsm/ocaml-yaml"
doc: "https://avsm.github.io/ocaml-yaml/"
bug-reports: "https://github.com/avsm/ocaml-yaml/issues"
depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "2.0"}
  "dune-configurator"
  "ctypes" {>= "0.14.0"}
  "bos"
  "fmt" {with-test}
  "logs" {with-test}
  "mdx" {with-test & >= "2.1.0"}
  "alcotest" {with-test}
  "crowbar" {with-test}
  "junit_alcotest" {with-test}
  "ezjsonm" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/avsm/ocaml-yaml.git"
