(library
 (name yaml_ffi)
 (public_name yaml.ffi)
 (libraries sexplib)
 (foreign_archives ../vendor/yaml_c)
 (ctypes
  (external_library_name yaml)
  (build_flags_resolver
   (vendored
     ; hack: repeated include dirs from root and relative since this gets
     ;  called from multiple places
    (c_flags (-I../vendor/headers -Ivendor/headers))))
  (headers (include "preamble.h"))
  (type_description
    (instance Types)
    (functor Type_description))
  (function_description
    (instance Functions)
    (functor Function_description))
  (generated_entry_point C)))
