(executable
 (name ffi_types_stubgen)
 (modules ffi_types_stubgen)
 (libraries yaml.bindings.types ctypes.stubs ctypes))

(rule
 (targets ffi_ml_types_stubgen.c)
 (deps ./ffi_types_stubgen.exe)
 (action (with-stdout-to %{targets} (run %{deps}))))

;; It would be lovely if jenga had rules to build from C.
(rule
 (targets ffi_ml_types_stubgen.exe)
 (deps    (:c ./ffi_ml_types_stubgen.c) ../../vendor/libyaml_c_stubs.a)
 (action (bash "\
%{cc} %{c} -I../../vendor \
  -I `dirname %{lib:ctypes:ctypes_cstubs_internals.h}` \
  -I %{ocaml_where} -o %{targets}")))
